--- a/part2/src/index.css
+++ b/part2/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1 {
+  color: green;
+  font-style: italic;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.note {
+  border: 1px solid black;
+  color: darkgreen;
+  background-color: lightgrey;
+  border-radius: 3px;
+  padding: 2px;
+  margin: 3px;
+}
+
+.error {
+  background-color: red;
+  border: 1pc solid black;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
 }
